--- a/dkms.conf
+++ b/dkms.conf
@@ -1,6 +1,6 @@
 PACKAGE_NAME="intel_msr"
 PACKAGE_VERSION="1.0"
-MAKE[0]="make"
+MAKE[0]="make KERNELDIR=/lib/modules/${kernelver}/build"
 CLEAN="make clean"
 BUILT_MODULE_NAME[0]="intel_msr"
 DEST_MODULE_LOCATION[0]="/kernel"
